# hpcourse

./: README.md
aptu/302_17/markelov/3/: task  task.cpp
aptu/302_17/markelov/opencl1/: CMakeLists.txt  main.cpp  matrix_convolution.cl
aptu/302_17/markelov/opencl2/: CMakeLists.txt  main.cpp  pref_sum.cl
